--- a/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
+++ b/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    @if (Context.User.Identity.IsAuthenticated)
+                    {
+                        <img width="40" src="http://pluspng.com/img-png/user-png-icon-male-user-icon-512.png" title="@User.Identity.Name" />
+                    }
+                    @if (!Context.User.Identity.IsAuthenticated)
+                    {
+                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                    }
+                    <div class="nav navbar-nav navbar-right">
+                        <div class="input-group">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" id="searchInput" aria-label="Search">
+                        </div>
+                    </div>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
