--- a/EduTube/EduTube.GUI/wwwroot/css/site.css
+++ b/EduTube/EduTube.GUI/wwwroot/css/site.css
@@ -54,3 +54,19 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*search input*/
+
+input[type=search] {
+    background: #ccc;
+    border: solid 1px #ccc;
+    padding: 9px 10px 9px 32px;
+    width: 55px;
+}
+
+    input[type=search]:focus {
+        width: 600px;
+        background-color: white;
+        border-color: #333;
+        border: solid 1px #fff;
+    }
