--- a/EduTube/EduTube.GUI/Views/Home/Index.cshtml
+++ b/EduTube/EduTube.GUI/Views/Home/Index.cshtml
@@ -3,23 +3,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h2>popular videos</h2>
+<div id="backgroundImage">
+    <img src="~/images/keyboard.jpg" width="900" />
+</div>
+<h2 class="text-center">Popular videos</h2>
 <div class="row">
     @foreach (var video in Model)
     {
-        <div class="col-lg-4">
-            <h2><a href="#">@video.Name</a></h2>
-            @if (video.YoutubeUrl != null)
-            {
-                <iframe id="videoFrame" width="300" height="200" src="@video.YoutubeUrl" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-            }
-            @if (video.YoutubeUrl == null)
-            {
-                <video width="300" controls>
-                    <source src="~/DR%c5%bdAVNI%20POSAO%20[HQ]%20-%20Ep.218%20%c4%8cekiranje%20(30.09.2013.).mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
-            }
+        <div class="col-lg-2">
+            <a href="#">
+                @if (video.YoutubeUrl != null)
+                {
+                    <iframe id="videoFrame" width="160" height="180" src="@video.YoutubeUrl" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                }
+                @if (video.YoutubeUrl == null)
+                {
+                    <video width="300" controls>
+                        <source src="~/DR%c5%bdAVNI%20POSAO%20[HQ]%20-%20Ep.218%20%c4%8cekiranje%20(30.09.2013.).mp4" type="video/mp4">
+                        Your browser does not support HTML5 video.
+                    </video>
+                }
+                <h6 class="text-white">@video.Name</h6>
+                <h6 class="text-white">@video.UserChannelName</h6>
+            </a>
+            <h6>@video.DateCreatedOn</h6>
         </div>
     }
 </div>
