--- a/EduTube/EduTube.GUI/Views/Videos/Create.cshtml
+++ b/EduTube/EduTube.GUI/Views/Videos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EduTube.DAL.Entities.Video
+﻿@model EduTube.GUI.ViewModels.VideoCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -24,33 +24,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateCreatedOn" class="control-label"></label>
-                <input asp-for="DateCreatedOn" class="form-control" />
-                <span asp-validation-for="DateCreatedOn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="YoutubeUrl" class="control-label"></label>
                 <input asp-for="YoutubeUrl" class="form-control" />
                 <span asp-validation-for="YoutubeUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FilePath" class="control-label"></label>
-                <input asp-for="FilePath" class="form-control" />
-                <span asp-validation-for="FilePath" class="text-danger"></span>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="AllowComments" /> @Html.DisplayNameFor(model => model.AllowComments)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Blocked" /> @Html.DisplayNameFor(model => model.Blocked)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Deleted" /> @Html.DisplayNameFor(model => model.Deleted)
                 </label>
             </div>
             <div class="form-group">
@@ -59,13 +39,21 @@
                 <span asp-validation-for="IvniteCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <label asp-for="VideoVisibility" class="control-label"></label>
+                <select asp-for="VideoVisibility" class="form-control">
+                    <option value="1">Public</option>
+                    <option value="2">Private</option>
+                    <option value="3">Invite</option>
+                </select>   
+                <span asp-validation-for="VideoVisibility" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VideoVisibility" class="control-label"></label>
-                <select asp-for="VideoVisibility" class="form-control"></select>
-                <span asp-validation-for="VideoVisibility" class="text-danger"></span>
+                <select multiple data-role="tagsinput" asp-for="Hashtags">
+                </select>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Video</label>
+                <input class="form-control" asp-for="Video" type="file"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
