Login and logout implemented

--- a/EduTube/EduTube.GUI/wwwroot/css/SingleVideo.css
+++ b/EduTube/EduTube.GUI/wwwroot/css/SingleVideo.css
@@ -1,24 +1,4 @@
-﻿Skip to content
-Why GitHub?
-Enterprise
-Explore
-Marketplace
-Pricing
-Search
-
-Sign in
-Sign up
-0 0 0 BulatL/Youtube2
-Code Issues 0 Pull requests 0 Projects 0 Security Insights
-Join GitHub today
-GitHub is home to over 36 million developers working together to host and review code, manage projects, and build software together.
-
-Youtube2/Youtube/wwwroot/Css/VideoPage.css
-@BulatL BulatL razdvojen css i js
-39cb362 on Oct 12, 2018
-211 lines (176 sloc) 2.9 KB
-
-body {
+﻿body {
     background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
     margin: 0;
     padding: 0;
