--- a/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
+++ b/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EduTube</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -33,7 +33,7 @@
                     }
                     @if (!Context.User.Identity.IsAuthenticated)
                     {
-                        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                        <a class="nav-link" href="/Login">Login</a>
                     }
                     <div class="nav navbar-nav navbar-right">
                         <div class="input-group">
